--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h2>360 ProWhey</h2>
                                        
                     <p >                        
-                       En grasa para ayudar a formar un cuerpo limpio y saludable.<br>
+                       La 360ProWhey ayuda a formar un cuerpo puro, limpio y saludable.<br>
                        Facilita la ganancia de masa muscular rápida y definida.<br>
                        Libre de gluten y brinda mayor producción de energía. <br>
 
