--- a/tabla.html
+++ b/tabla.html
@@ -40,7 +40,7 @@
                     <h2>¿Quienes somos?</h2>
                                        
                     <p >                        
-                        Somos una empresa peruana en el mercado de "Vitaminas y complementos nutricionales para la salud y el deporte", ofrecemos a nuestros clientes un concepto de marca totalmente deportiva y con la misma atención y liderazgo de siempre. Contamos con las empresas de suplementación deportiva más prestigiosas a nivel mundial.
+                        Somos una empresa peruana en el mercado de "Vitaminas y complementos nutricionales para la salud y el deporte", ofrecemos a nuestros clientes un concepto de marca totalmente deportiva y con la misma atención y liderazgo de siempre.
 
                        
                     </p>
